--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -2,6 +2,8 @@
 # Default home page with boxes providing collection stats
 layout: page
 ---
+
+{{ content }}
 {%- assign items = site.data[site.metadata] -%}
 <div class="row">
   <div class="col-md-8">
