--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -3,7 +3,6 @@
 layout: page
 ---
 
-{{ content }}
 {%- assign items = site.data[site.metadata] -%}
 <div class="row">
   <div class="col-md-8">
@@ -16,9 +15,9 @@ layout: page
 
     {% include index/time.html %}
 
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
+    {% include index/featured-terms.html field="subject-en;subject-es" title="Top Subjects" btn-color="primary" %}
 
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" %}
+    {% include index/featured-terms.html field="location-en;location-es" title="Locations" btn-color="outline-secondary" %}
 
     {% include index/objects.html %}
 
