--- a/_includes/js/map-js.html
+++ b/_includes/js/map-js.html
@@ -2,7 +2,7 @@
 {% assign cb_icons = site.pages | where: "name","cb-icons.svg" | first %}
 {% assign icons = cb_icons.icons %}{%- endif -%}
 {%- assign items = site.data[site.metadata] | where_exp: 'item','item.latitude' -%}
-{%- assign fields = site.data.config-map -%}
+{%- assign fields = site.data.config-map | where_exp: 'field', 'field.lang contains page.lang' -%}
 <!-- load leaflet dependencies -->
 <script src="{{ '/assets/lib/leaflet/leaflet.js' | relative_url }}"></script>
 <script src="{{ '/assets/lib/leaflet/Leaflet.fullscreen.min.js' | relative_url }}"></script>
@@ -17,7 +17,7 @@
     var geodata = { "type": "FeatureCollection", "features": [ 
     {% for item in items %}
     { "type":"Feature", "geometry":{ "type":"Point", "coordinates":[{{ item.longitude | strip }},{{ item.latitude | strip }}] }, "properties":
-    { "title": {{ item.title | jsonify }}, 
+    { "title": {% if page.lang == site.lang-default %}{{ item.title | jsonify }}{% else %}{% assign translated_title = 'title-' | append: page.lang %}{{ item[translated_title] | jsonify }}{% endif %}, 
     {% for f in fields %}{{ f.field | jsonify }}: {{ item[f.field] | jsonify }},{% endfor %}{% if item.youtubeid %} "youtube": {{ item.youtubeid | jsonify }}, {% endif %}
     "format": {{ item.format | jsonify }}, {% if  item.filename contains '/' %}"filename": "{{ item.filename }}" {% else %}"filename":{{ '/objects/' | relative_url | append: item.filename | jsonify }}{% endif %}, "id": {{ item.objectid | jsonify }} } }{% unless forloop.last %}, {% endunless %}{% endfor %}
     ]};
@@ -103,7 +103,7 @@
         /* bind feature for search */
         feature.layer = layer;{% endif %}
         /* calculate item link */
-        var itemHref = '{{ "/item.html?id=" | relative_url }}' + feature.properties.id;
+        var itemHref = '{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}{{ "/item.html?id=" | relative_url }}' + feature.properties.id;
         /* find object thumb based on format */
         var thumbSrc;
         if (feature.properties.youtube) {
@@ -124,9 +124,9 @@
             feature.properties.title + '</a></h4><div class="text-center"><a href="' + itemHref + 
             '" ><img class="mapthumb img-thumb" src="' +  thumbSrc + '" alt="item thumbnail"></a></div><p class="mt-1">';
         /* add metadata fields */
-        {% for f in fields %}{% if f.display_name %}
+        {% for f in fields %}{% if f.translate_id_map %}
         if (feature.properties[{{ f.field | jsonify }}]) {
-            popupTemplate += '<strong>{{ f.display_name }}:</strong> ' + feature.properties[{{ f.field | jsonify }}] + '<br>'; 
+            popupTemplate += '<strong>{{ site.data.config-translation | where: "translate_id", f.translate_id_map | map: page.lang | first }}:</strong> ' + feature.properties[{{ f.field | jsonify }}] + '<br>'; 
         }
         {% endif %}{% endfor %}
         /* add object link button to popup */
