--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -2,3 +2,18 @@
     Put your custom SCSS here! 
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
+
+// language button styling
+.lang-buttons {
+    background: white;
+}
+.btn-active {
+    background-color:rgb(0, 0, 0);
+}
+.btn.focus {
+    box-shadow: 0 0 0 0.2rem rgba(86, 87, 85, 0.25);
+}
+.banner-buttons {
+    position: absolute;
+    z-index: 9;
+}
