--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -3,7 +3,7 @@
 layout: page
 custom-foot: js/table-js.html
 ---
-{% assign fields = site.data.config-table | map: 'display_name' %}
+{% assign fields = site.data.config-table | where_exp: 'field', 'field.lang contains page.lang' | map: 'translate_id_table' %}
 {% include data-download-modal.html %}
 
 {{ content }}
@@ -13,7 +13,7 @@ custom-foot: js/table-js.html
         <thead>
             <tr>
                 {% for f in fields %}
-                <th scope="col">{{ f }}</th>
+                <th scope="col">{{ site.data.config-translation | where: "translate_id", f | map: page.lang | first }}</th>
                 {% endfor %}
                 <th>Link</th>
             </tr>
