--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,3 +1,4 @@
+{% assign languageNumber = site.site_languages | map: 'lang_id' | join: ';' | split: ';' | size %}
 {% if page.layout == "home-infographic" and site.data.theme.featured-image %}
 <style>
 #home-banner {
@@ -17,7 +18,6 @@
 }
 </style>
 <div id="home-banner" class="container-fluid mb-0 p-0">
-    {% assign languageNumber = site.site_languages | map: 'lang_id' | join: ';' | split: ';' | size %}
     {% if languageNumber >= 2 %}
         {% include language-button.html %}
     {% endif %}
@@ -37,6 +37,11 @@
     </div>
 </div>
 {%- else -%}
+{% if languageNumber >= 2 %}
+<div class="banner-buttons">
+    {% include language-button.html %}
+</div>
+{% endif %}
 <div class="container">
     <div class="row align-items-center">
         <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
