--- a/_includes/language-button.html
+++ b/_includes/language-button.html
@@ -1,15 +1,13 @@
-{% assign languages = site.site_languages %}
+{%- assign languages = site.site_languages -%}
 
 <div class="text-end">
-    <div class="btn-group p-4 lang-buttons border rounded" role="group" aria-label="Basic radio toggle button group">
-        {% for l in languages %}
-        {% if l.default == "true" %}
-        <input type="radio" class="btn-check" name="language_options" id="{{ l.lang_id }}" autocomplete="off">
-        <label class="btn border" for="{{ l.lang_id }}">{{ l.lang_display }}</label>
-        {% else %}
-        <input type="radio" class="btn-check" name="language_options" id="{{ l.lang_id }}" autocomplete="off">
-        <label class="btn border" for="{{ l.lang_id }}">{{ l.lang_display }}</label>
-        {% endif %}
-        {% endfor %}
+    <div class="btn-group" role="group" aria-label="Button group to toggle site language">
+        {%- for l in languages -%}
+        {%- if l.default == true -%}
+        <a id="{{ l.lang_id }}" class="btn btn-primary lang-button active" aria-current="page">{{ l.lang_display }}</a>
+        {%- else -%}
+        <a id="{{ l.lang_id }}" class="btn btn-primary lang-button" aria-current="page">{{ l.lang_display }}</a>
+        {%- endif -%}
+        {%- endfor -%}
     </div>
 </div>
