--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,11 +4,11 @@
 */
 
 // language button styling
-.lang-buttons {
+.language-buttons {
     background: white;
 }
 .btn-active {
-    background-color:rgb(0, 0, 0);
+    background:rgb(0, 0, 0);
 }
 .btn.focus {
     box-shadow: 0 0 0 0.2rem rgba(86, 87, 85, 0.25);
