--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -19,7 +19,9 @@
 </style>
 <div id="home-banner" class="container-fluid mb-0 p-0">
     {% if languageNumber >= 2 %}
-        {% include language-button.html %}
+        <div class="d-flex justify-content-end">
+            {% include language-button.html %}
+        </div>
     {% endif %}
     <div id="home-title-box" class="position-relative" >
         <div class="p-2 text-center text-white bg-dark bg-opacity-75">
@@ -38,8 +40,10 @@
 </div>
 {%- else -%}
 {% if languageNumber >= 2 %}
-<div class="banner-buttons">
-    {% include language-button.html %}
+<div class="d-flex justify-content-end">
+    <div class="banner-buttons">
+        {% include language-button.html %}
+    </div>
 </div>
 {% endif %}
 <div class="container">
