--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -15,8 +15,10 @@
                 {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%} 
                 {% for nav in navItems %}
                 {% if nav.stub %}
+                {% capture page-stub %}{{ page.lang | prepend: '/' | append: nav.stub }}{% endcapture %}
+                {% capture page-url %}{% if page.layout == 'home-infographic' %}{{ page.url | remove: 'index' }}{% else %}{{ page.url | append: '.html' }}{% endif %}{% endcapture %}
                 <li class="nav-item">
-                    <a class="nav-link{% if page.url == nav.stub %} active{% endif %}" href="{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}{{ nav.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
+                    <a class="nav-link{% if page.lang == site.lang-default and page.url == nav.stub %} active{% elsif page-url == page-stub %} active{% endif %}" href="{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}{{ nav.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
                 </li>
                 {%- else -%}
                 <li class="nav-item dropdown">
