--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,11 +14,11 @@
                     <li class="nav-item">
                     {% if nav.stub %}
                     {% capture page-stub %}{{ page.lang | prepend: '/' | append: nav.stub }}{% endcapture %}
-                        <a class="nav-link text-light{% if page.lang == site.lang-default and page.url == nav.stub %} active{% elsif page-url == page-stub %} active{% endif %}" href="{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}{{ nav.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
+                        <a class="nav-link text-light{% if page.lang == site.site_languages[0]['lang_id'] and page.url == nav.stub %} active{% elsif page-url == page-stub %} active{% endif %}" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ nav.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
                     {%- else -%}
                     {% assign childStub = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nav.translate_id_nav' | first %}
                     {% capture child-stub %}{{ page.lang | prepend: '/' | append: childStub.stub }}{% endcapture %}
-                        <a class="nav-link text-light{% if page.lang == site.lang-default and page.url == childStub.stub %} active{% elsif page-url == child-stub %} active{% endif %}" href="{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}{{ childStub.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
+                        <a class="nav-link text-light{% if page.lang == site.site_languages[0]['lang_id'] and page.url == childStub.stub %} active{% elsif page-url == child-stub %} active{% endif %}" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ childStub.stub | relative_url }}">{{ site.data.config-translation | where: "translate_id", nav.translate_id_nav | map: page.lang | first }}</a>
                     {% endif %}
                     </li>
                     {%- endfor -%}
