--- a/_includes/js/lunr-js.html
+++ b/_includes/js/lunr-js.html
@@ -53,7 +53,7 @@ function lunr_search () {
             {% assign display = fields | where: 'display','true' %}
             {% for d in display %}
             {% if forloop.first %}
-            '<p class="h4"><a href="{{ site.baseurl }}{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}/item.html?id=' + store[ref].id + '">' + store[ref][{{ fields[0].field | jsonify }}]  + '</a></p>' +
+            '<p class="h4"><a href="{{ site.baseurl }}{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}/item.html?id=' + store[ref].id + '">' + store[ref][{{ fields[0].field | jsonify }}]  + '</a></p>' +
             '<p class="ms-3">';
               {% else %}
               if(store[ref][{{ d.field | jsonify }}]) {
