--- a/_includes/js/map-js.html
+++ b/_includes/js/map-js.html
@@ -17,7 +17,7 @@
     var geodata = { "type": "FeatureCollection", "features": [ 
     {% for item in items %}
     { "type":"Feature", "geometry":{ "type":"Point", "coordinates":[{{ item.longitude | strip }},{{ item.latitude | strip }}] }, "properties":
-    { "title": {% if page.lang == site.lang-default %}{{ item.title | jsonify }}{% else %}{% assign translated_title = 'title-' | append: page.lang %}{{ item[translated_title] | jsonify }}{% endif %}, 
+    { "title": {% if page.lang == site.site_languages[0]['lang_id'] %}{{ item.title | jsonify }}{% else %}{% assign translated_title = 'title-' | append: page.lang %}{{ item[translated_title] | jsonify }}{% endif %}, 
     {% for f in fields %}{{ f.field | jsonify }}: {{ item[f.field] | jsonify }},{% endfor %}{% if item.youtubeid %} "youtube": {{ item.youtubeid | jsonify }}, {% endif %}
     "format": {{ item.format | jsonify }}, {% if  item.filename contains '/' %}"filename": "{{ item.filename }}" {% else %}"filename":{{ '/objects/' | relative_url | append: item.filename | jsonify }}{% endif %}, "id": {{ item.objectid | jsonify }} } }{% unless forloop.last %}, {% endunless %}{% endfor %}
     ]};
@@ -103,7 +103,7 @@
         /* bind feature for search */
         feature.layer = layer;{% endif %}
         /* calculate item link */
-        var itemHref = '{% unless page.lang == site.lang-default %}/{{ page.lang }}{% endunless %}{{ "/item.html?id=" | relative_url }}' + feature.properties.id;
+        var itemHref = '{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ "/item.html?id=" | relative_url }}' + feature.properties.id;
         /* find object thumb based on format */
         var thumbSrc;
         if (feature.properties.youtube) {
