--- a/_includes/cb/credits.html
+++ b/_includes/cb/credits.html
@@ -1,16 +1,16 @@
 <div class="container-fluid mt-4 mb-n3 bg-light p-4 " id="technical">
     <div class="container mt-4 border rounded p-4 bg-white">
-        <h3>Technical Credits - CollectionBuilder</h3>
+        <h3>{% include translate.html id="tech-heading" default="Technical Credits - CollectionBuilder" %}</h3>
         <div class="row my-2 justify-content-center">
             <div class="col-md-8 p-4">
-                <p>This digital collection is built with <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener">CollectionBuilder</a>, an open source framework for creating digital collection and exhibit websites that is developed by faculty librarians at the University of Idaho Library following the <a href="https://lib-static.github.io" target="_blank" rel="noopener">Lib-Static</a> methodology.</p>
-                <p>The site started from the <a href="https://github.com/CollectionBuilder/collectionbuilder-gh" target="_blank" rel="noopener">CollectionBuilder-GH</a> template which utilizes the static website generator <a href="https://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> and <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a> to build and host digital collections and exhibits.</p>
+                <p>{% include translate.html id='tech-p1' default='This digital collection is built with <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener">CollectionBuilder</a>, an open source framework for creating digital collection and exhibit websites that is developed by faculty librarians at the University of Idaho Library following the <a href="https://lib-static.github.io" target="_blank" rel="noopener">Lib-Static</a> methodology.' %}</p>
+                <p>{% include translate.html id='tech-p2' default='The site started from the <a href="https://github.com/CollectionBuilder/collectionbuilder-gh" target="_blank" rel="noopener">CollectionBuilder-GH</a> template which utilizes the static website generator <a href="https://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> and <a href="https://pages.github.com/" target="_blank" rel="noopener">GitHub Pages</a> to build and host digital collections and exhibits.' %}</p>
             </div>
             <div class="col-md-4 text-center">
-                <h4>More Information Available</h4>
-                <a class="btn btn-outline-primary my-2" target="_blank" rel="noopener" href="https://collectionbuilder.github.io/about.html">Technical Specifications</a>
+                <h4>{% include translate.html id="tech-info" default="More Information Available" %}</h4>
+                <a class="btn btn-outline-primary my-2" target="_blank" rel="noopener" href="https://collectionbuilder.github.io/about.html">{% include translate.html id="tech-specs" default="Technical Specifications" %}</a>
                 <br>
-                <a class="btn btn-outline-secondary my-2" target="_blank" rel="noopener" href="https://collectionbuilder.github.io/about.html#support">IMLS Support</a>
+                <a class="btn btn-outline-secondary my-2" target="_blank" rel="noopener" href="https://collectionbuilder.github.io/about.html#support">{% include translate.html id="tech-imls" default="IMLS Support" %}</a>
             </div>
         </div>
     </div>
