set up browse page translation

--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -105,7 +105,7 @@ function filterItems(arr,q) {
         }
     }
     // add number 
-    document.querySelector("#numberOf").innerHTML = filteredItems.length + " of {{ items | size }} items";
+    document.querySelector("#numberOf").innerHTML = filteredItems.length + " {% include translate.html id='of' default='of' %} {{ items | size }} {% include translate.html id='items' default='items' %}";
     
     // add stuff, make cards first in giant var, then add all at once to speed things up
     var cards = "";
