set up home page translations

--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -34,7 +34,7 @@
         </div>
         {% unless site.data.theme.featured-image contains '/' %}
         <div class="position-absolute bottom-0 end-0 px-2 bg-dark bg-opacity-75">
-            <a class="text-white fs-6" href="{{ site.data.theme.featured-image | prepend: '/item.html?id=' | relative_url }}" title="{{ featuredItem.title | escape }}">Featured Image</a>
+            <a class="text-white fs-6" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ site.data.theme.featured-image | prepend: '/item.html?id=' | relative_url }}" title="{{ featuredItem.title | escape }}">{% include translate.html id="home-featured-image" default="Featured Image" %}</a>
         </div>{% endunless %}
     </div>
 </div>
