--- a/_includes/index/data-download.html
+++ b/_includes/index/data-download.html
@@ -1,28 +1,28 @@
 {%- assign stubs = site.data.config-nav | map: 'stub' | join: ';' -%}
 <div class="card mb-3">
     <div class="card-body">
-        <h5 class="card-title">Collection as Data <small>(click to download)</small></h5>
+        <h5 class="card-title">{% include translate.html id="home-data" default="Collection as Data" %} <small>({% include translate.html id="home-data-download" default="click to download" %})</small></h5>
         <p class="card-text text-center">
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/metadata.csv' | relative_url }}" target="_blank">Metadata CSV</a>
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/metadata.json' | relative_url }}" target="_blank">Metadata JSON</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/metadata.csv' | relative_url }}" target="_blank">{% include translate.html id="data-download-metadata-csv" default="Metadata CSV" %}</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/metadata.json' | relative_url }}" target="_blank">{% include translate.html id="data-download-metadata-json" default="Metadata JSON" %}</a>
             {% if stubs contains "subject" %}
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/subjects.json' | relative_url }}" target="_blank">Subjects JSON</a>
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/subjects.csv' | relative_url }}" target="_blank">Subjects CSV</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/subjects.json' | relative_url }}" target="_blank">{% include translate.html id="data-download-subjects-json" default="Subjects JSON" %}</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/subjects.csv' | relative_url }}" target="_blank">{% include translate.html id="data-download-subjects-csv" default="Subjects CSV" %}</a>
             {% endif %}
             {% if stubs contains "map" %}
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/geodata.json' | relative_url }}" target="_blank">Geodata JSON</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/geodata.json' | relative_url }}" target="_blank">{% include translate.html id="data-download-geodata-json" default="Geodata JSON" %}</a>
             {% endif %}
             {% if stubs contains "location" %}
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/locations.csv' | relative_url }}" target="_blank">Locations CSV</a>
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/locations.json' | relative_url }}" target="_blank">Locations JSON</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/locations.csv' | relative_url }}" target="_blank">{% include translate.html id="data-download-locations-csv" default="Locations CSV" %}</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/locations.json' | relative_url }}" target="_blank">{% include translate.html id="data-download-locations-json" default="Locations JSON" %}</a>
             {% endif %}
             {% if stubs contains "timeline" %}
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/timelinejs.json' | relative_url }}" target="_blank">Timeline JSON</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/timelinejs.json' | relative_url }}" target="_blank">{% include translate.html id="data-download-timeline-json" default="Timeline JSON" %}</a>
             {% endif %}
             {% if site.data.theme.metadata-facets-fields %}
-            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/facets.json' | relative_url }}" target="_blank">Facets JSON</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ '/assets/data/facets.json' | relative_url }}" target="_blank">{% include translate.html id="data-download-facets-json" default="Facets JSON" %}</a>
             {% endif %}
-            <a class="btn btn-sm btn-secondary m-2" href="{{ site.source-code }}" rel="noopener" target="_blank">Source Code</a>
+            <a class="btn btn-sm btn-secondary m-2" href="{{ site.source-code }}" rel="noopener" target="_blank">{% include translate.html id="data-download-source-code" default="Source Code" %}</a>
         </p>
     </div>
 </div>
