--- a/_includes/index/description.html
+++ b/_includes/index/description.html
@@ -1,8 +1,8 @@
 <div class="card mb-3">
   <div class="card-body">
-    <h5 class="card-title">Description</h5>
+    <h5 class="card-title">{% include translate.html id="home-description" default="Description" %}</h5>
     <p class="card-text">{{ site.description }}</p>
     {%- assign about = site.data.config-nav | where: "stub","/about.html" | size -%}
-    {% if about > 0 %}<a class="btn btn-outline-primary" href="{{ '/about.html' | relative_url }}" >Learn More &raquo;</a>{% endif %}
+    {% if about > 0 %}<a class="btn btn-outline-primary" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/about.html' | relative_url }}" >{% include translate.html id="home-learn" default="Learn More" %} &raquo;</a>{% endif %}
   </div>
 </div>
