--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,4 +1,5 @@
 {% assign languageNumber = site.site_languages | map: 'lang_id' | join: ';' | split: ';' | size %}
+{% assign altLang = site.site_languages | where: "lang_id", page.lang | first %}
 {% if page.layout == "home-infographic" and site.data.theme.featured-image %}
 <style>
 #home-banner {
@@ -29,8 +30,8 @@
             <a class="d-none d-md-block" href="{{ site.organization-link }}" target="_blank" rel="noopener">
                 <img id="home-banner-logo" src="{{ site.organization-logo-nav | relative_url }}" alt="{{ site.organization-name }} home" >
             </a>{% endif %}
-            <h1 class="display-4">{{ site.title }}</h1>
-            {% if site.tagline %}<p class="mb-0">{{ site.tagline }}</p>{% endif %}
+            <h1 class="display-4">{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.title }}{% else %}{{ altLang.lang_site_title }}{% endif %}</h1>
+            {% if site.tagline %}<p class="mb-0">{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.tagline }}{% else %}{{ altLang.lang_site_tagline }}{% endif %}</p>{% endif %}
         </div>
         {% unless site.data.theme.featured-image contains '/' %}
         <div class="position-absolute bottom-0 end-0 px-2 bg-dark bg-opacity-75">
@@ -49,8 +50,8 @@
 <div class="container">
     <div class="row align-items-center">
         <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1><a class="text-dark font-weight-normal" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
-            {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
+            <h1><a class="text-dark font-weight-normal" href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ site.baseurl }}/" >{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.title }}{% else %}{{ altLang.lang_site_title }}{% endif %}</a></h1>	 
+            {% if site.tagline %}<p>{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.tagline }}{% else %}{{ altLang.lang_site_tagline }}{% endif %}</p>{% endif %}
         </div>
         {% if site.organization-logo-banner %}
         <div class="col-md-3 d-none d-lg-block text-end">
