--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
+{% assign altLang = site.site_languages | where: "lang_id", page.lang | first %}
+
 <footer class="bg-dark pt-4 mt-auto container-fluid">
 
     <div class="row border-bottom border-white pb-4 mb-2">
 
         <div class="col-md-7  px-4 mt-2">
 
-            <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h2>
-            <p class="text-white"><small>{{ site.description }}</small></p>
+            <h2 class="h4"><a href="{% unless page.lang == site.site_languages[0]['lang_id'] %}/{{ page.lang }}{% endunless %}{{ '/' | relative_url }}" class="text-white font-weight-normal">{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.title }}{% else %}{{ altLang.lang_site_title }}{% endif %}</a></h2>
+            <p class="text-white"><small>{% if page.lang == site.site_languages[0]['lang_id'] %}{{ site.description }}{% else %}{{ altLang.lang_site_description }}{% endif %}</small></p>
             <nav>
                 <ul id="footer-nav" class="nav nav-pills ">
                     {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%}
@@ -36,7 +38,7 @@
             </p>
             {% endif %}
             <p class="text-white" id="footer-credits">
-                <small><em>built with</em>
+                <small><em>{{ site.data.config-translation | where: "translate_id", "home-built" | map: page.lang | first | default: "built with" }}</em>
                     <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener" title="CollectionBuilder">
                         <img src="{{ '/assets/img/collectionbuilder-logo.png' | relative_url }}" class="img-fluid" alt="CollectionBuilder logo" >
                     </a>
@@ -48,7 +50,7 @@
     </div>
 
     <div class="col-md-12 text-center pt-3 pb-1">
-        <p class="text-white">Last updated {{ site.time | date: '%Y' }}</p>
+        <p class="text-white">{{ site.data.config-translation | where: "translate_id", "home-update" | map: page.lang | first | default: "Last updated" }} {{ site.time | date: '%Y' }}</p>
     </div>
 
 </footer>
