--- a/_includes/js/lunr-js.html
+++ b/_includes/js/lunr-js.html
@@ -44,7 +44,7 @@ function lunr_search () {
       })
     });*/
   resultdiv.innerHTML = "";
-  var newresults = '<tr><td><h4 class="mt-3">' + result.length + ' Result(s) found</h4></td></tr>';
+  var newresults = '<tr><td><h4 class="mt-3">' + result.length + ' {% include translate.html id="search-results" default="Result(s) found" %}</h4></td></tr>';
   for (var item in result) {
     var ref = result[item].ref;
     var searchitem =
